WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36387
REGRESSION: Can "uncheck" radio buttons by clicking on them
https://bugs.webkit.org/show_bug.cgi?id=36387
Summary
REGRESSION: Can "uncheck" radio buttons by clicking on them
Simon Fraser (smfr)
Reported
2010-03-19 13:48:49 PDT
http://trac.webkit.org/changeset/56174/
broke radio buttons. You can now uncheck the only checked radio button by clicking on it.
Attachments
Patch
(12.63 KB, patch)
2010-03-19 16:10 PDT
,
Simon Fraser (smfr)
dglazkov
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-03-19 16:10:40 PDT
Created
attachment 51200
[details]
Patch
Dimitri Glazkov (Google)
Comment 2
2010-03-19 16:16:46 PDT
Comment on
attachment 51200
[details]
Patch r=me with nits:
> + if (window.layoutTestController) > + layoutTestController.dumpAsText(); > + > + function dispatchEvent(target, eventType, offsetX, offsetY) > + {
two-space indent? :)
> +</body> > +</html> > \ No newline at end of file
add extra line break.
> // As a way to store the state, we return 0 if we were unchecked, 1 if we were checked, and 2 for > // indeterminate.
remove that comment.
Simon Fraser (smfr)
Comment 3
2010-03-19 16:42:44 PDT
http://trac.webkit.org/changeset/56284
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug