WebCore/html/HTMLInputElement.h
@@ -132,6 +132,7 @@ public:
     bool checked() const { return m_checked; }
     void setChecked(bool, bool sendChangeEvent = false);
 
+    // 'indeterminate' is a state independent of the checked state that causes the control to draw in a way that hides the actual state.
     bool allowsIndeterminate() const { return inputType() == CHECKBOX || inputType() == RADIO; }
     bool indeterminate() const { return m_indeterminate; }
     void setIndeterminate(bool);
